exports[`SidePanel should render docked menu 1`] = `
<nav
  className="undefined tc-side-panel">
  <button
    aria-hidden="true"
    className="btn btn-link"
    disabled={false}
    onClick={undefined}
    title="Toggle side panel"
    type="button">
    <i
      className="fa fa-arrow-left" />
  </button>
  <ul
    className="nav nav-pills nav-stacked">
    <li>
      <button
        className="btn btn-link"
        disabled={false}
        onClick={undefined}
        role="link"
        title="Display Preparations"
        type="button">
        <i
          className="fa fa-asterisk" />
      </button>
    </li>
    <li>
      <button
        className="btn btn-link"
        disabled={false}
        onClick={undefined}
        role="link"
        title="Display Datasets"
        type="button">
        <i
          className="fa fa-file-excel-o" />
      </button>
    </li>
    <li>
      <button
        className="btn btn-link"
        disabled={false}
        onClick={undefined}
        role="link"
        title="Display Favorites"
        type="button">
        <i
          className="fa fa-star" />
      </button>
    </li>
  </ul>
</nav>
`;

exports[`SidePanel should render expanded menu 1`] = `
<nav
  className="tc-side-panel">
  <button
    aria-hidden="true"
    className="btn btn-link"
    disabled={false}
    onClick={undefined}
    title="Toggle side panel"
    type="button">
    <i
      className="fa fa-arrow-left" />
  </button>
  <ul
    className="nav nav-pills nav-stacked">
    <li>
      <button
        className="btn btn-link"
        disabled={false}
        onClick={undefined}
        role="link"
        title="Display Preparations"
        type="button">
        <i
          className="fa fa-asterisk" />
        <span>
          Preparations
        </span>
      </button>
    </li>
    <li>
      <button
        className="btn btn-link"
        disabled={false}
        onClick={undefined}
        role="link"
        title="Display Datasets"
        type="button">
        <i
          className="fa fa-file-excel-o" />
        <span>
          Datasets
        </span>
      </button>
    </li>
    <li>
      <button
        className="btn btn-link"
        disabled={false}
        onClick={undefined}
        role="link"
        title="Display Favorites"
        type="button">
        <i
          className="fa fa-star" />
        <span>
          Favorites
        </span>
      </button>
    </li>
  </ul>
</nav>
`;
